fix for the vertical scrollbar styling

--- a/fitnesse/resources/bootstrap-plus/less/light/customize.less
+++ b/fitnesse/resources/bootstrap-plus/less/light/customize.less
@@ -1194,10 +1194,9 @@ kbd {
   min-width: 300px;
   max-width: 300px;
   height: 100%;
-  padding: 65px 0 61px;
+  padding: 55px 0 51px;
   background-color: #f8f8f8;
   border-right: 1px solid #e7e7e7;
-  overflow: auto;
 }
 
 #highlight {
@@ -1209,7 +1208,9 @@ kbd {
 }
 
 #sidebarContent {
-  padding: 0 15px;
+  height: 100%;
+  padding: 10px 15px;
+  overflow: auto;
 }
 
 #sidebarContent li {
